--- a/.github/ISSUE_TEMPLATE/회의록.md
+++ b/.github/ISSUE_TEMPLATE/회의록.md
@@ -12,4 +12,8 @@ assignees: ''
 –   회의  참여자 
 –   회의  일시
 –   회의  내용  ( 대화록  형식  혹은  안건  및  발언자의  의견  요약과  최종  결론  ) 
+1. 안건
+2. conflict와 해결과정
+3. 기획
+
 –   회의록  작성자의  의견/소감
